--- a/ContactWeb01/ContactWeb01.csproj
+++ b/ContactWeb01/ContactWeb01.csproj
@@ -267,8 +267,8 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
     <Content Include="Content\bootstrap.rtl.css.map" />
-    <Content Include="Content\oldBootstrap\bootstrap.min.css.map" />
-    <Content Include="Content\oldBootstrap\bootstrap.css.map" />
+    <Content Include="Content\bootstrap.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-utilities.rtl.min.css.map" />
     <Content Include="Content\bootstrap-utilities.rtl.css.map" />
     <Content Include="Content\bootstrap-utilities.min.css.map" />
