--- a/ContactWeb01/ContactWeb01.csproj
+++ b/ContactWeb01/ContactWeb01.csproj
@@ -180,10 +180,17 @@
     <Compile Include="Migrations\202106081825492_Initial_Identity_Migration.designer.cs">
       <DependentUpon>202106081825492_Initial_Identity_Migration.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106082311288_CreateContactandStateTables.cs" />
+    <Compile Include="Migrations\202106082311288_CreateContactandStateTables.designer.cs">
+      <DependentUpon>202106082311288_CreateContactandStateTables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\ContactWebConstants.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\State.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -294,6 +301,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202106081825492_Initial_Identity_Migration.resx">
       <DependentUpon>202106081825492_Initial_Identity_Migration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106082311288_CreateContactandStateTables.resx">
+      <DependentUpon>202106082311288_CreateContactandStateTables.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
